kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
spec:
  rules:
  - http:
      paths:
      - path: /user(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-service
            port:
              number: 5001
      - path: /loan(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: loan-service
            port:
              number: 5002
      - path: /collection(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: collection-service
            port:
              number: 5003
      - path: /reporting(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: reporting-service
            port:
              number: 5004
